# tokra_loop

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile.dev  LICENSE.md  Makefile  README.md  docker-compose.yml  manage.py  package.json  pegasus-config.yaml  pyproject.toml  tsconfig.json  vite.config.ts
api-client/: runtime.ts
api-client/.openapi-generator/: FILES
api-client/apis/: DashboardApi.ts  PegasusApi.ts  TeamsApi.ts
api-client/models/: AggregateEmployeeData.ts  DepartmentEnum.ts  Employee.ts  Invitation.ts  Membership.ts  OpenInvitation.ts  PaginatedEmployeeList.ts  PaginatedInvitationList.ts  PaginatedTeamList.ts  PatchedEmployee.ts  PatchedInvitation.ts  PatchedTeam.ts  Price.ts  RoleEnum.ts  StatusEnum.ts  Subscription.ts  SubscriptionItem.ts  Team.ts  UserInvitationsResponse.ts  UserSignupStats.ts  index.ts
apps/subscriptions/: helpers.py  webhooks.py  wrappers.py
apps/subscriptions/views/: checkout_views.py  views.py
apps/teams/: models.py  urls.py
apps/teams/migrations/: 0003_team_billing_details_last_changed_team_customer_and_more.py
apps/users/: mailing_list.py
apps/users/migrations/: 0002_customuser_language_customuser_timezone_and_more.py
apps/web/: meta.py  urls.py  views.py
assets/styles/: site-tailwind.css
templates/web/: base.html
templates/web/components/: app_nav_menu_items.html  team_nav.html
templates/web/ui_demos/: shadcn_demo.html
tokra_loop_admin/: asgi.py  celery.py  settings.py  settings_production.py  urls.py  wsgi.py
